# ReverseMyAge_Agent_Engine

./: .gitignore  Flow.md  README.md  README_New.md  pyproject.toml
app/: __init__.py  agent.py  domain_config.py  prompts.py
app/config/: agents.yaml
app/sub_agents/atlas/: agent.py  config.py  prompts.py  report_exporter.py  standard_reports.py  tools.py
app/sub_agents/atlas/reports/: sections.py
app/sub_agents/atlas/sub_agents/analytics/: agent.py
app/sub_agents/atlas/sub_agents/bigquery/: agent.py  prompts.py  tools.py
app/sub_agents/nexus/: agent.py  prompts.py  tools.py
app/sub_agents/nexus/schedule_reports/: __init__.py
app/sub_agents/nexus/schedule_reports/common/: __init__.py  constants.py  filename_utils.py  ot_calculations.py
app/sub_agents/nexus/schedule_reports/reports/: __init__.py  pareto_optimization_html.py
app/sub_agents/nexus/sub_agents/bigquery/: agent.py  prompts.py
app/sub_agents/sage/: agent.py  config.py
app/sub_agents/scheduling/: agent.py  prompts.py  report_exporter.py  tools.py
app/sub_agents/scheduling/schedule_reports/: __init__.py
app/sub_agents/scheduling/schedule_reports/common/: export_utils.py  html_components.py  utils.py
app/sub_agents/scheduling/schedule_reports/reports/: __init__.py  customer_overview.py  optimization_card.py  pareto_optimization.py  pareto_optimization_html.py  region_overview.py
app/sub_agents/scheduling/sub_agents/analytics/: prompts.py
app/sub_agents/scheduling/sub_agents/bigquery/: tools.py
app/sub_agents/sme/: agent.py  config.py  employee_tools.py  prompts.py  tools.py
app/sub_agents/sme_actual_RAG/: agent.py  config.py  prompts.py  tools.py
app/sub_agents/touch_points/: agent.py  prompts.py  report_exporter.py  standard_reports.py  tools.py
app/sub_agents/touch_points/sub_agents/bigquery/: prompts.py  tools.py
app/sub_agents/training/: agent.py  prompts.py  tools.py
app/sub_agents/training/sub_agents/analytics/: agent.py
app/sub_agents/training/sub_agents/bigquery/: agent.py  prompts.py  tools.py
app/sub_agents/training/sub_agents/research/: agent.py  prompts.py  tools.py
app/tools/: __init__.py  export_tool.py  weather_tool.py
app/utils/: __init__.py  weather.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  global.css
frontend/src/components/: ActivityTimeline.tsx  ChatMessagesView.tsx  ChatMessagesView_Black.tsx  InputForm.tsx  WelcomeScreen.tsx  WelcomeScreen_Black_Theme.tsx  WelcomeScreen_Tech_Theme.tsx
